# LISA

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  env.yml  environment.yml  post_install.sh  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
lisa/: __init__.py  config.py  dataset.py  evaluate.py  features.py  full_process.py  lf_collect_test.py  lisa_workflow.py  plots.py  private_paths.py  validation_schema.json
lisa/modeling/: gradient_boosting.py  hyperparameters.json  logistic_regression.py  multipredictor.py  neural_net.py  predict.py  random_forest.py  random_forest_classifier.py  remote_multipredictor.py  train.py
models/: logistic_regression_cv.pkl
models/LGBM/: activity.pkl  feature_importances_Incline.json  feature_importances_Speed.json  incline.pkl  output.json  speed.pkl
models/LR/: activity.pkl  incline.pkl  output.json  scaler.pkl  speed.pkl
models/P1/: feature_importances_Incline.json  feature_importances_Speed.json  output.json
models/P5/: feature_importances_Incline.json  feature_importances_Speed.json  output.json
models/P6/: feature_importances_Incline.json  feature_importances_Speed.json
models/RF/: feature_importances_Incline.json  output.json  (+1 more)
notebooks/: data_explore.ipynb  data_loading.ipynb  example.ipynb  experiment_tracking.ipynb  feature_extraction.ipynb  logistic_regression.ipynb  multipredictor.ipynb  multipredictor_pipeline.ipynb  neural_net.ipynb  plots.ipynb  process_analog.ipynb  process_script.ipynb  processing_explore.ipynb  random_forest.ipynb
tests/: test_logistic_regression.py
(+11 files in other folders)
