[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "lisa"
version = "0.0.1"
description = "Low-Impact Soldier Augmentation Project"
authors = [
  { name = "Tom Wilson" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"

[tool.ruff]
extend-include = ["*.ipynb"]
line-length = 120

[tool.ruff.lint]
ignore = [
  "F821", # Undefined name
  "B006", # Do not use mutable data structures for argument defaults
]
select = [
  "E",   # pycodestyle
  "F",   # Pyflakes
  "I",   # isort
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "SIM", # flake8-simplify
]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"